--- a/src/XQueueWatcher/App.config
+++ b/src/XQueueWatcher/App.config
@@ -8,10 +8,16 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
   </startup>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
+    <add name="statsd" connectionString="" />
+  </connectionStrings>
   <log4net>
 	<root>
 	  <level value="DEBUG" />
 	  <appender-ref ref="FileAppender" />
+      <appender-ref ref="ConsoleAppender" />
 	</root>
 	<appender name="FileAppender" type="log4net.Appender.FileAppender">
 	  <file value="logs\\xqueuewatcher.log" />
@@ -19,7 +25,20 @@
 	  <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 	  <encoding value="utf-8" />
 	  <layout type="log4net.Layout.PatternLayout">
-		<param name="ConversionPattern" value="%date [%thread] %-5level %logger [%property{address}, %property{user}]:%newline → %message%newline" />
+		<param name="ConversionPattern" value="%date [%thread] %-5level %logger — %message%newline" />
+	  </layout>
+	</appender>
+    <appender name="ConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+	  <mapping>
+		<level value="ERROR" />
+		<foreColor value="Red, HighIntensity" />
+	  </mapping>
+	  <mapping>
+		<level value="DEBUG" />
+		<foreColor value="Green" />
+	  </mapping>
+	  <layout type="log4net.Layout.PatternLayout">
+		<conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
 	  </layout>
 	</appender>
   </log4net>
