--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -18,7 +18,7 @@
 	<section name="graphite.elmah" type="Graphite.Configuration.GraphiteElmahConfiguration, Graphite.Elmah" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
     <add name="statsd" connectionString="" />
   </connectionStrings>
@@ -47,7 +47,10 @@
     <add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
     <!-- Данные для авторизации через Контур.Паспорт -->
     <add key="owin.konturPassport.clientId" value="ulearn" />
+    <!--
     <add key="owin.konturPassport.clientSecret" value="" />
+    -->
+    <add key="owin.konturPassport.clientSecret" value="DFQKe6esYvrpUdSk42inkTxzReRq85gRE" />
 
     <!-- Папка с курсами. По умолчанию — корневая папка веб-проекта. Должна содержать подпапки Courses, Courses.Staging, Courses.Versions.
        Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
