Move logs to service folders
Add EntityFramework as a dependency for XQueueWatcher.Service

--- a/src/XQueueWatcher.Service/App.config
+++ b/src/XQueueWatcher.Service/App.config
@@ -1,48 +1,47 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-
-	<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-	<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
-    </startup>
-	<connectionStrings>
-		<add name="DefaultConnection" connectionString="" providerName="System.Data.SqlClient" />
-		<!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
-		<add name="statsd" connectionString="" />
-	</connectionStrings>
-	<log4net>
-		<root>
-			<level value="DEBUG" />
-			<appender-ref ref="FileAppender" />
-			<appender-ref ref="ConsoleAppender" />
-		</root>
-		<appender name="FileAppender" type="log4net.Appender.FileAppender">
-			<file value="logs\\xqueuewatcher.log" />
-			<appendToFile value="true" />
-			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-			<encoding value="utf-8" />
-			<layout type="log4net.Layout.PatternLayout">
-				<param name="ConversionPattern" value="%date [%thread] %-5level %logger — %message%newline" />
-			</layout>
-		</appender>
-		<appender name="ConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
-			<mapping>
-				<level value="ERROR" />
-				<foreColor value="Red, HighIntensity" />
-			</mapping>
-			<mapping>
-				<level value="DEBUG" />
-				<foreColor value="Green" />
-			</mapping>
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
-			</layout>
-		</appender>
-	</log4net>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
+  </startup>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="" providerName="System.Data.SqlClient" />
+    <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
+    <add name="statsd" connectionString="" />
+  </connectionStrings>
+  <log4net>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="FileAppender" />
+      <appender-ref ref="ConsoleAppender" />
+    </root>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="logs\\xqueuewatcher.log" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <encoding value="utf-8" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%date [%thread] %-5level %logger — %message%newline" />
+      </layout>
+    </appender>
+    <appender name="ConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+      <mapping>
+        <level value="ERROR" />
+        <foreColor value="Red, HighIntensity" />
+      </mapping>
+      <mapping>
+        <level value="DEBUG" />
+        <foreColor value="Green" />
+      </mapping>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
+      </layout>
+    </appender>
+  </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -115,4 +114,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
