--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -214,18 +214,22 @@
   <ItemGroup>
     <Compile Include="CSharp\CourseValidator_ReportError_should.cs" />
     <Compile Include="CSharp\CourseValidator_ReportWarning_should.cs" />
-    <Compile Include="CSharp\IndentsValidation\IndentsTestHelper.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Correct\MultilineArgumentListIncreasesIndentationLength.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Correct\MultilineParameterListIncreasesIndentationLength.cs" />
+    <Compile Include="CSharp\IndentsValidation\Test_Jobs.cs" />
     <Compile Include="CSharp\IndentsValidation\IndentsValidator_Should.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\BaseTypesChildrenAlwaysIndented.cs" />
-    <Compile Include="CSharp\IndentsValidation\TestData\Correct\BlockChildrenNotIndentedInAccessors.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Correct\SingleLineBracesNotIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\CompilationUnitChildrenNeverIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\BlockChildrenIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\ContentOfBraceTokensKeepsIndentationLength.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Correct\MultilineExpressionStatementIncreasesIndentationLength.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\BaseTypesChildrenShouldBeIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\BlockChildrenShouldBeIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\CompilationUnitChildrenShouldNeverBeIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\ContentOfBraceTokensShouldKeepIndentationLength.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\BraceTokensShouldBeAligned.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\MultilineExpressionStatementShouldIncreaseIndentationLength.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\TabsMixedWithSpaces.cs" />
     <Compile Include="CSharp\LineLengthChecker_should.cs" />
     <Compile Include="CSharp\NamingChecker_should.cs" />
