test files changes

--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -215,6 +215,8 @@
     <Compile Include="CSharp\CourseValidator_ReportError_should.cs" />
     <Compile Include="CSharp\CourseValidator_ReportWarning_should.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\BracesMightNotBeAlignedIfOpenBraceDoesntHaveLeadingTrivia.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Correct\IfBracesNotOnSameLineNestedTokensInsideBracesIndented.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Correct\IfBracesNotOnSameLineFirstLevelTokensInsideBracesIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\SingleLineParameterListNotIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\SingleLineExpressionStatementNotIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\SingleLineArgumentListNotIndented.cs" />
@@ -223,20 +225,21 @@
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\SingleLineMultipleStatementsNotIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\BracesShouldBeAlignedIfOpenBraceHasLeadingTriviaAndBracesNotOnSameLine.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\IfBracesNotOnSameLineAndOpenbraceHasContentOnSameLineItShouldBeIndented.cs" />
-    <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\IfBracesNotOnSameLineContentOfBracesShouldBeConsistent.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\IfBracesNotOnSameLineFirstLevelTokensInsideBracesShouldBeConsistent.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\IfBracesNotOnSameLineNestedTokensInsideBracesShouldBeIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\MultilineArgumentListShouldBeIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\MultilineParameterListShouldBeIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\Test_Jobs.cs" />
     <Compile Include="CSharp\IndentsValidation\IndentsValidator_Should.cs" />
-    <Compile Include="CSharp\IndentsValidation\TestData\Correct\ContentOfSingleLineBracesNotIndented.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Correct\SingleLineBracesContentsNotIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\CompilationUnitChildrenNeverIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\BlockChildrenIndented.cs" />
-    <Compile Include="CSharp\IndentsValidation\TestData\Correct\IfBracesNotOnSameLineContentOfBracesIsIndented.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Correct\IfBracesNotOnSameLineFirstLevelTokensInsideBracesConsistent.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\MultilineExpressionStatementIsIndented.cs" />
-    <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\IfBracesNotOnSameLineContentOfBracesShouldBeIndented.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\IfBracesNotOnSameLineFirstLevelTokensInsideBracesShouldBeIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\CompilationUnitChildrenShouldNeverBeIndented.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\MultilineExpressionStatementShouldBeIndented.cs" />
-    <Compile Include="CSharp\IndentsValidation\TestData\Incorrect\TabsMixedWithSpaces.cs" />
+    <Compile Include="CSharp\IndentsValidation\TestData\Correct\TabsMixedWithSpaces.cs" />
     <Compile Include="CSharp\LineLengthChecker_should.cs" />
     <Compile Include="CSharp\NamingChecker_should.cs" />
     <Content Include="CSharp\testProject\projDir\MeaningOfLifeTask.WrongAnswer.27.cs">
