Course.exe test: Improve report (html-version for team city)

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -18,7 +18,7 @@
 	<section name="graphite.elmah" type="Graphite.Configuration.GraphiteElmahConfiguration, Graphite.Elmah" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
     <add name="statsd" connectionString="" />
   </connectionStrings>
