Groups interface changes
SysAdmins can add users to group directly
Show emails in group members list
Some changes in group lightboxes: change removal buttons color from black to red, add header 'Name' in settings
Some changes in all lightboxes: enlarge close button and modal-title
Add access to group via autocomplete by login or name
New interface for removing and archiving groups
Notifications about accesses to group: granted access and revoked access
Change owner of group
User can revoke access for himself

Fix avatar placeholder
Fix fonts on iOS, macOS and others

--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -457,6 +457,14 @@
     <Compile Include="Migrations\201709080920180_AddGroupLabelsAccessAndTimes.Designer.cs">
       <DependentUpon>201709080920180_AddGroupLabelsAccessAndTimes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709120648366_AddSomeGroupsNotifications.cs" />
+    <Compile Include="Migrations\201709120648366_AddSomeGroupsNotifications.Designer.cs">
+      <DependentUpon>201709120648366_AddSomeGroupsNotifications.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709120745261_RemoveGroupIsPublic.cs" />
+    <Compile Include="Migrations\201709120745261_RemoveGroupIsPublic.Designer.cs">
+      <DependentUpon>201709120745261_RemoveGroupIsPublic.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -755,6 +763,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709080920180_AddGroupLabelsAccessAndTimes.resx">
       <DependentUpon>201709080920180_AddGroupLabelsAccessAndTimes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709120648366_AddSomeGroupsNotifications.resx">
+      <DependentUpon>201709120648366_AddSomeGroupsNotifications.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709120745261_RemoveGroupIsPublic.resx">
+      <DependentUpon>201709120745261_RemoveGroupIsPublic.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
