--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -8,6 +8,7 @@
   <package id="Bitrium.Http.Extensions" version="1.1.0" targetFramework="net47" />
   <package id="bootstrap" version="3.3.7" targetFramework="net47" />
   <package id="DotNetZip" version="1.10.1" targetFramework="net47" />
+  <package id="Elmah.Contrib.WebApi" version="1.0.10.25" targetFramework="net47" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net47" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net47" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net47" />
