--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -473,6 +473,10 @@
     <Compile Include="Migrations\201709200719448_RemoveRequiredNotificationTransportApplicationUserForeignKey.Designer.cs">
       <DependentUpon>201709200719448_RemoveRequiredNotificationTransportApplicationUserForeignKey.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710050829134_AddCourseAccesses.cs" />
+    <Compile Include="Migrations\201710050829134_AddCourseAccesses.Designer.cs">
+      <DependentUpon>201710050829134_AddCourseAccesses.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -784,6 +788,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709200719448_RemoveRequiredNotificationTransportApplicationUserForeignKey.resx">
       <DependentUpon>201709200719448_RemoveRequiredNotificationTransportApplicationUserForeignKey.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710050829134_AddCourseAccesses.resx">
+      <DependentUpon>201710050829134_AddCourseAccesses.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
