Student's profile page

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1166,6 +1166,7 @@
     <Content Include="Views\Stepik\Process.cshtml" />
     <Content Include="Views\Admin\_GroupAccess.cshtml" />
     <Content Include="Views\Admin\_GroupMember.cshtml" />
+    <Content Include="Views\Account\Profile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
